--- a/baitapfigma/stylee.css
+++ b/baitapfigma/stylee.css
@@ -14,147 +14,174 @@ body {
 
 .container {
     width: 100%;
-    overflow: hidden;
+    /* overflow: hidden; */
     height: 930px;
     background: url(../image/Rectangle9.png) no-repeat;
     background-size: 100% 930px;
-   
 }
 
-@media only screen and (max-width: 1421px) {
-    /* For tablets: */
-    .container .header-mobile {
-        display: none;
-    }
-    .container .header .header1 {
-        width: 65%;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        float: left;
-    }
-    .container .header .header1 ul {
-        display: flex;
-    }
-    .container .header .click a {
-        float: left;
-        text-decoration: none;
-        padding: 30px;
-        color: #FFFFFF;
-        font-family: Graphik;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 15px;
-        line-height: 28px;
-    }
-    .container .header .header1 .image img {
-        width: 186px;
-        height: 58px;
-    }
-    .container .header .icon1 {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .container .header .icon1 .icon {
-        padding: 20px;
-    }
-    .container .content .type {
-        font-family: Graphik;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 48px;
-        line-height: 55px;
-        color: #FFFFFF;
-        text-align: center;
-        letter-spacing: 0.2px;
-        margin: 10px auto;
-    }
-    .container .content .check {
-        background: #2091F9;
-        border-radius: 35px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 16px auto;
-        padding-top: 40px;
-        width: 236px;
-            height: 52px;
-        margin: 80px auto;
-    }
-    .container .content .text1 {
-        font-family: Graphik;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 28px;
-        line-height: 40px;
-        color: #FFFFFF;
-        text-align: center;
-        letter-spacing: 0.2px;
-        width: 636px;
-        height: 80px;
-        margin: 40px auto;
-    }
+.container .header .header1 {
+    width: 65%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    float: left;
+}
+
+.container .header .header1 ul {
+    display: flex;
+}
+
+.container .header .click a {
+    float: left;
+    text-decoration: none;
+    padding: 30px;
+    color: #FFFFFF;
+    font-family: Graphik;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 28px;
+    padding-right: 41px;
+}
+
+.container .header .header1 .image1 img {
+    width: 186px;
+    height: 58px;
+}
+
+.container .header .icon1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container .header .icon1 .icon {
+    padding: 32px;
+}
+
+.container .content .type1 {
+    font-family: Graphik;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 48px;
+    line-height: 55px;
+    color: #FFFFFF;
+    text-align: center;
+    letter-spacing: 0.2px;
+    margin: 10px auto;
+    padding-top: 270px;
+}
+
+.container .content .check {
+    background: #2091F9;
+    border-radius: 35px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 16px auto;
+    padding-top: 40px;
+    width: 236px;
+    height: 52px;
+    margin: 90px auto;
     
-    .container .content .check .style {
-        font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
-        line-height: 20px;
-        color: #FFFFFF;
-        border: 0;
-        background: #2091F9;
-    }
-} 
-
-
-@media only screen and (max-width: 600px) {
-    .container .header-mobile {
-        display: flex;
-        justify-content: space-between;
-        padding: 0 25px;
-        align-items: center;
-    }
-    .container .header {
-        display: none;
-    }
-    .container .header-mobile .icon {
-        width: 26px;
-        height: 16px;
-    }
-    .container .content .type {
-        font-family: Graphik;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 48px;
-        line-height: 55px;
-        color: #FFFFFF;
-        text-align: center;
-        letter-spacing: 0.2px;
-    }
-    .container .content .text1 {
-        font-family: Graphik;
-        font-style: normal;
-        font-weight: normal;
-        font-size: 28px;
-        line-height: 40px;
-        color: #FFFFFF;
-        text-align: center;
-        margin-top: 40px;
-        width: 100%;
-        padding: 0 20px;
-    }
-    .container .content .check .style {
-        font-style: normal;
-        font-weight: normal;
-        font-size: 20px;
-        line-height: 20px;
-        color: #FFFFFF;
-        border: 0;
-        background: #2091F9;
-        width: 100%;
-    }
 }
 
+.container .content .text {
+    font-family: Graphik;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 40px;
+    color: #FFFFFF;
+    text-align: center;
+    letter-spacing: 0.2px;
+    margin: 40px auto;
+    padding-top: 27px;
+}
 
+.container .content .check .style {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 20px;
+    color: #FFFFFF;
+    border: 0;
+    background: #2091F9;
+}
+
+/* phan2 */
+
+.figma {
+    width: 100%;
+    height: 1362px;
+    background-color: #FFFFFF;
+    margin-top: 125px;
+}
+
+.figma .content1 {
+    width: 100%;
+}
+
+.figma .content1 .type {
+    font-size: 48px;
+    font-style: regular;
+    vertical-align: top;
+    letter-spacing: 0, 2px;
+    color: #252B42;
+    text-align: center;
+    font-weight: normal;
+    padding-bottom: 27px;
+}
+
+.figma .content1 .text-figma {
+    font-size: 28px;
+    font-style: regular;
+    vertical-align: top;
+    letter-spacing: 0, 2px;
+    color: #374754;
+   padding-bottom: 97px;
+    text-align: center;
+    line-height: 40px;
+    margin: 0 auto;
+    font-weight: normal;
+}
+
+.figma .content2 ul {
+    display: flex;
+}
+
+.figma .content2 .list {
+    /* float: left; */
+    text-align: center;
+    width: 33%;
+    margin: 60px auto;
+}
+
+.figma .content2 .list .image {
+    padding-bottom: 20px;
+}
+
+.figma .content2 .list .text1 {
+    margin: 0 auto;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.figma .content2 .list .text-content {
+    /* width: 231px;
+    height: 100px; */
+    margin: 0 auto;
+    font-size: 18px;
+    letter-spacing: 0, 2px;
+    color: #374754;
+}
+
+.figma .footer img {
+    text-align: center;
+    /* width: 1177px;
+    height: 658px; */
+    margin: 0 auto;
+    width: 100%;
+}
