--- a/baitapfigma/stylee.css
+++ b/baitapfigma/stylee.css
@@ -43,7 +43,7 @@ body {
     font-weight: normal;
     font-size: 15px;
     line-height: 28px;
-    padding-right: 41px;
+    padding-right: 31px;
 }
 
 .container .header .header1 .image1 img {
@@ -58,20 +58,22 @@ body {
 }
 
 .container .header .icon1 .icon {
-    padding: 32px;
+    padding: 30px;
 }
 
 .container .content .type1 {
     font-family: Graphik;
     font-style: normal;
     font-weight: bold;
-    font-size: 48px;
-    line-height: 55px;
+    font-size: 74px;
+    line-height: 84px;
     color: #FFFFFF;
     text-align: center;
     letter-spacing: 0.2px;
     margin: 10px auto;
-    padding-top: 270px;
+    padding-top: 100px;
+    width: 672px;
+    height: 168px;
 }
 
 .container .content .check {
@@ -85,7 +87,6 @@ body {
     width: 236px;
     height: 52px;
     margin: 90px auto;
-    
 }
 
 .container .content .text {
@@ -99,6 +100,8 @@ body {
     letter-spacing: 0.2px;
     margin: 40px auto;
     padding-top: 27px;
+    width: 766px;
+    height: 80px;
 }
 
 .container .content .check .style {
@@ -141,11 +144,13 @@ body {
     vertical-align: top;
     letter-spacing: 0, 2px;
     color: #374754;
-   padding-bottom: 97px;
+    padding-bottom: 97px;
     text-align: center;
     line-height: 40px;
     margin: 0 auto;
     font-weight: normal;
+    width: 532px;
+    h80px
 }
 
 .figma .content2 ul {
@@ -167,6 +172,8 @@ body {
     margin: 0 auto;
     font-weight: bold;
     font-size: 20px;
+    width: 194px;
+    height: 56px;
 }
 
 .figma .content2 .list .text-content {
@@ -176,6 +183,8 @@ body {
     font-size: 18px;
     letter-spacing: 0, 2px;
     color: #374754;
+    width: 231px;
+    height: 100px;
 }
 
 .figma .footer img {
@@ -184,4 +193,665 @@ body {
     height: 658px; */
     margin: 0 auto;
     width: 100%;
+}
+
+/* phan3 */
+
+.container2 {
+    width: 100%;
+    height: 924px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 110px;
+}
+
+.container2 .figma2 .content-figma2 {
+    width: 355px;
+    height: 110px;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 55px;
+    color: #252B42;
+}
+
+.container2 .figma2 .text-figma2 {
+    width: 532px;
+    height: 80px;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 40px;
+    color: #374754;
+    padding-top: 27px;
+    padding-right: 138px;
+}
+
+.container2 .figma2 button {
+    background: #2091F9;
+    border-radius: 35px;
+    width: 236px;
+    height: 60px;
+    border: 0;
+    margin-top: 70px;
+}
+
+/* phan4 */
+
+.container3 {
+    width: 100%;
+    height: 725px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.container3 .image3 img {
+    margin-right: 113px;
+}
+
+.container3 .figma3 .content-figma3 {
+    width: 173px;
+    height: 28px;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 28px;
+    color: #252B42;
+}
+
+.container3 .figma3 .text-figma3 {
+    width: 324px;
+    height: 100px;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 55px;
+    color: #252B42;
+    padding-bottom: 35px;
+    padding-top: 17px;
+}
+
+.container3 .figma3 .center {
+    width: 276px;
+    height: 28px;
+}
+
+.container3 .figma3 .center1 {
+    width: 301px;
+    height: 25px;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 25px;
+    color: #374754;
+    padding-bottom: 36px;
+}
+
+.container3 .figma3 input {
+    width: 273px;
+    height: 54px;
+    background: #F4F4F4;
+    border: 1px solid #E8E8E8;
+    box-sizing: border-box;
+    border-radius: 39px;
+    padding-left: 39px;
+}
+
+.container3 .figma3 button {
+    width: 172px;
+    height: 58px;
+    background: #2091F9;
+    border-radius: 35px;
+    border: 0;
+    margin-left: 12px;
+    margin-top: 10px;
+}
+
+/* phan5 */
+
+.container4 {
+    width: 100%;
+    height: 932px;
+    display: flex;
+    flex-direction: column;
+}
+
+.container4 .figma4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.container4 .figma4 .content-figma4 {
+    padding-bottom: 27px;
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 55px;
+    color: #252B42;
+}
+
+.container4 .figma4 .text-figma4 {
+    width: 532px;
+    height: 80px;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 40px;
+    color: #374754;
+    padding-bottom: 92px;
+}
+
+.container4 .image4 {
+    width: 1100px;
+    margin: 0 auto;
+}
+
+.container4 .image4 ul .img4 .img4-figma {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+    color: #374754;
+    margin-top: 31px;
+    text-align: center;
+}
+
+.container4 .image4 ul .google {
+    width: 273px;
+    height: 163px;
+    background: #FFFFFF;
+    border: 1px solid #D8D8D8;
+    box-sizing: border-box;
+    text-align: center;
+    float: left;
+}
+
+.container4 .image4 ul .google .color {
+    padding: 0 40px;
+}
+
+.container4 .image4 ul .google .color .blues {
+    color: #3686F7;
+    font-size: 48px;
+}
+
+.container4 .image4 ul .google .color .reds {
+    font-size: 48px;
+    color: #FF302F;
+    ;
+}
+
+.container4 .image4 ul .google .color .oranges {
+    font-size: 48px;
+    color: #FFBA40;
+}
+
+.container4 .image4 ul .google .color .greens {
+    color: #20B15A;
+    font-size: 48px;
+}
+
+.container4 .image4 ul .amazon {
+    width: 273px;
+    height: 160.14px;
+    padding: 10px 40px;
+    background: #FFFFFF;
+    border: 1px solid #D8D8D8;
+    box-sizing: border-box;
+    float: left
+}
+
+.container4 .image4 ul .amazon img {
+    padding-top: 10px;
+}
+
+.container4 .image4 ul .mcs {
+    width: 301px;
+    height: 165px;
+    background: #FFFFFF;
+    border: 1px solid #D8D8D8;
+    box-sizing: border-box;
+    padding: 0 40px;
+    float: left;
+}
+
+.container4 .image4 ul .uber {
+    width: 220px;
+    height: 165px;
+    background: #FFFFFF;
+    border: 1px solid #D8D8D8;
+    box-sizing: border-box;
+    padding: 0 40px;
+    float: left;
+}
+
+.container4 .image4 ul .drop {
+    width: 309px;
+    height: 164px;
+    background: #FFFFFF;
+    border: 1px solid #D8D8D8;
+    box-sizing: border-box;
+    padding: 0 40px;
+    float: left;
+}
+
+.container4 .click {
+    background-color: #2091F9;
+    width: 236px;
+    height: 60px;
+    border-radius: 35px;
+    /* padding-left: 20px;
+   padding-top: 20px; */
+    text-align: center;
+    margin: auto;
+    padding-top: 25px;
+}
+
+.container4 .click button {
+    border: 0;
+    background-color: #2091F9;
+    margin: 0 auto;
+    color: #FFFFFF;
+}
+
+/* phan6 */
+
+.figma6 {
+    width: 100%;
+    height: 811px;
+    text-align: center;
+}
+
+.figma6 .center6 .text-figma6 {
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 55px;
+    color: #252B42;
+    padding-bottom: 90px;
+}
+
+.figma6 .center6 img {
+    padding-bottom: 60px;
+}
+
+.figma6 .center6 .content-figma6 {
+    width: 967px;
+    height: 80px;
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 40px;
+    color: #374754;
+    margin: 0 auto;
+    padding-bottom: 60px;
+}
+
+.figma6 .image6 {
+    display: flex;
+    padding-bottom: 80px;
+    align-items: center;
+    justify-content: center;
+}
+
+.figma6 .image6 ul .paragrap {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+    color: #374754;
+}
+
+.figma6 .image6 ul .about {
+    margin-left: 20px;
+}
+
+.figma6 .click1 {
+    background: #2091F9;
+    border-radius: 35px;
+    width: 276px;
+    height: 60px;
+    margin: 0 auto;
+}
+
+.figma6 .click1 button {
+    border: 0;
+    padding-top: 15px;
+    background: #2091F9;
+    color: ;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 28px;
+    color: #FFFFFF
+}
+
+/* phan7 */
+
+.figma7 {
+    width: 100%;
+    height: 1155px;
+    background-color: #252B42;
+}
+
+.figma7 .content-figma7 {
+    text-align: center;
+}
+
+.figma7 .content-figma7 .center-figma7 {
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 55px;
+    color: #FFFFFF;
+    padding-top: 110px;
+}
+
+.figma7 .content-figma7 .text-figma7 {
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 40px;
+    color: #FFFFFF;
+    width: 532px;
+    height: 80px;
+    margin: 27px auto;
+}
+
+.figma7 .order {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.figma7 .order .order1 {
+    width: 335px;
+    height: 607px;
+    background: #FFFFFF;
+    border: 1px solid #DEDEDE;
+    box-sizing: border-box;
+    box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
+    border-radius: 10px;
+    margin-top: 133px;
+    margin-right: 50px;
+}
+
+.figma7 .order .order1 .center-order {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 28px;
+    text-align: center;
+    padding-top: 43px;
+}
+
+.figma7 .order .order1 .text-order {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+    color: #374754;
+    width: 148px;
+    height: 46px;
+    margin: 0 auto;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+.figma7 .order .order1 .icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.figma7 .order .order1 .icon .text-icon {
+    font-weight: bold;
+    font-size: 74px;
+    line-height: 84px;
+    color: #252B42;
+    padding-right: 10px;
+}
+
+.figma7 .order .order1 .icon .icon-order .icon1 {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 28px;
+    color: #252B42;
+}
+
+.figma7 .order .order1 .icon .icon-order .icon2 {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+}
+
+.figma7 .order .order1 .text-link {
+    text-align: center;
+    padding-top: 28px;
+}
+
+.figma7 .order .order1 .text-link ul .link {
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 28px;
+    color: #252B42;
+    padding-bottom: 20px;
+}
+
+.figma7 .order .order1 button {
+    background: #2091F9;
+    border-radius: 35px;
+    width: 255px;
+    height: 56px;
+    border: 0;
+    margin-left: 40px;
+    color: #FFFFFF;
+}
+
+.figma7 .order .order2 {
+    width: 335px;
+    height: 693px;
+    padding-top: 45px;
+}
+
+.figma7 .order .order2 .center-order2 {
+    color: #FFFFFF;
+}
+
+.figma7 .order .order2 {
+    background-color: #2091F9;
+    ;
+}
+
+.figma7 .order .order2 .centers {
+    color: #FFFFFF;
+}
+
+.figma7 .order .order2 .orders {
+    color: #FFFFFF;
+}
+
+.figma7 .order .order2 .icons .text-icons {
+    color: #FFFFFF;
+}
+
+.figma7 .order .order2 .icons .icon1s {
+    color: #FFFFFF;
+}
+
+.figma7 .order .order2 .icons .icon2s {
+    color: #FFFFFF;
+}
+
+.figma7 .order .order2 .links ul .link {
+    color: #FFFFFF;
+}
+
+.figma7 .order .order2 .check {
+    background-color: #FFFFFF;
+    color: #2091F9;
+}
+
+/* phan8 */
+
+.figma8 {
+    width: 100%;
+    height: 1206px;
+}
+
+.figma8 .center8 {
+    text-align: center;
+    margin-top: 213px;
+}
+
+.figma8 .center8 .center-figma8 {
+    font-weight: normal;
+    font-size: 48px;
+    line-height: 55px;
+    color: #252B42;
+    padding-bottom: 27px;
+}
+
+.figma8 .center8 .text-figma8 {
+    font-weight: normal;
+    font-size: 28px;
+    line-height: 40px;
+    color: #374754;
+    width: 532px;
+    height: 80px;
+    margin: 0 auto;
+}
+
+.figma8 .content-figma8 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.figma8 .content-figma8 .input-figma8 {
+    width: 453px;
+    height: 669px;
+    background: #FFFFFF;
+    border: 1px solid #DDDDDD;
+    box-sizing: border-box;
+    border-radius: 20px;
+    margin-top: 60px;
+    margin-right: 60px;
+}
+
+.figma8 .content-figma8 .input-figma8 .text1-figma8 {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 28px;
+    color: #252B42;
+    padding-top: 52px;
+    text-align: center;
+}
+
+.figma8 .content-figma8 .input-figma8 input {
+    width: 353px;
+    height: 54px;
+    background: #F5F5F5;
+    border: 1px solid #E8E8E8;
+    box-sizing: border-box;
+    border-radius: 39px;
+    margin-top: 45px;
+    padding-left: 20px;
+    margin-left: 50px;
+}
+
+.figma8 .content-figma8 .input-figma8 textarea {
+    width: 353px;
+    height: 193px;
+    background: #F5F5F5;
+    border: 1px solid #E8E8E8;
+    box-sizing: border-box;
+    margin: 45px;
+    padding: 23px 20px;
+    border: 0;
+}
+
+.figma8 .content-figma8 button {
+    background: #2091F9;
+    border-radius: 35px;
+    width: 145px;
+    height: 56px;
+    margin-left: 50px;
+    border: 0;
+    color: #FFFFFF;
+}
+
+.figma8 .icon-figma8 ul {
+    display: flex;
+    text-align: center;
+}
+
+.figma8 .icon-figma8 ul .icons-figma8 img {
+    padding-bottom: 20px;
+}
+
+.figma8 .icon-figma8 ul .mail {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+    color: #374754;
+    width: 293px;
+    height: 46px;
+    padding-right: 35px;
+}
+
+.figma8 .icon-figma8 ul .mail1 {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+    color: #374754;
+    padding-right: 35px;
+}
+
+.figma8 .icon-figma8 ul .mail2 {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+    color: #374754;
+}
+
+.figma8 .icon-figma8 .map img {
+    margin-left: 75px;
+    margin-top: 70px;
+}
+
+.figma8 .icon-figma8 .iconss .icon-style {
+    margin-top: 74px;
+    padding-right: 32px;
+}
+
+/* footer */
+
+.footer-figma {
+    width: 100%;
+    height: 567px;
+    background: #252B42;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.footer-figma .footer1-figma .text-footer {
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 28px;
+    color: #FFFFFF;
+    padding-bottom: 25px;
+}
+
+.footer-figma .footer1-figma .link-footer {
+    font-weight: normal;
+    font-size: 15px;
+    line-height: 28px;
+    color: #FFFFFF;
+    margin-right: 130px;
+}
+.footer-figma .mail-footer ul .mail1-footer{
+padding-bottom: 20px;
+}
+.footer-figma .mail-footer ul .mail1-footer img{
+    padding-right: 30px;
+    
+}
+.footer-figma .mail-footer ul .mail1-footer a{
+    color: #FFFFFF;
+    text-decoration: none;
 }
